# sagi

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
include/: lox.h  scanner.h  tokens.h
src/: lox.cpp  main.cpp  scanner.cpp  tokens.cpp
